<resources>
    <string name="app_name">Быки и Коровы</string>
    <string name="app_description">Классическая логическая игра, где нужно угадать 4-значное число. Быки означают правильные цифры на правильных позициях, а коровы - правильные цифры на неправильных позициях.</string>
    <string name="bulls_and_cows_game">Логическая игра</string>
    <string name="suggest">Предложить</string>
    <string name="new_game">Новая игра</string>
    <string name="quit">Выход</string>
    <string name="leaderboard">Таблица лидеров</string>
    <string name="help">Помощь</string>
    <string name="enter_your_guess">Введите ваше предположение (4 цифры)</string>
    <string name="invalid_input">Неверный ввод! Пожалуйста, введите 4 разные цифры без ведущего нуля.</string>
    <string name="congratulations">Поздравляем!</string>
    <string name="you_won">Вы выиграли за %1$d попыток!</string>
    <string name="time_taken">Время: %1$s</string>
    <string name="enter_name">Введите ваше имя:</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="name_hint">Ваше имя</string>
    <string name="no_attempts_yet">Попыток пока нет</string>
    <string name="attempts">Попытки</string>
    <string name="time">Время</string>
    <string name="name">Имя</string>
    <string name="no_records">Записей пока нет</string>
    <string name="exit_confirmation">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="game_rules">Правила игры</string>
    <string name="rules_description">Цель игры - угадать 4-значное число, загаданное компьютером. Все цифры в числе разные, и число не может начинаться с нуля.</string>
    <string name="bulls_explanation">• Бык (Bull) - цифра находится на правильной позиции\n• Например: загадано 1234, вы ввели 1567 → 1 бык (цифра 1 на правильной позиции)</string>
    <string name="cows_explanation">• Корова (Cow) - цифра есть в числе, но на неправильной позиции\n• Например: загадано 1234, вы ввели 5671 → 1 корова (цифра 1 есть в числе, но на неправильной позиции)</string>
    <string name="language">Язык</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="portuguese">Português</string>
    <string name="finnish">Suomi</string>
    <string name="bulls_and_cows_both">%1$d быков, %2$d коров</string>
    <string name="bulls_only">%1$d быков</string>
    <string name="cows_only">%1$d коров</string>
    <string name="no_matches">Нет совпадений</string>
    <string name="win_message">4 быка - Вы выиграли!</string>
    <string name="game_subtitle">Логическая игра</string>
</resources> 